--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,20 @@
     "configurations": [
         {
             "type": "node",
+            "request": "attach",
+            "name": "Node: Nodemon",
+            "processId": "${command:PickProcess}",
+            "restart": true,
+            "protocol": "inspector"
+        },
+        {
+            "type": "node",
             "request": "launch",
             "name": "kafka-cl testProducer",
             "program": "${workspaceFolder}\\src\\index.ts",
             "preLaunchTask": "tsc: build - tsconfig.json",
             "args": [
+                "--config=testConfig.json",
                 "testProducer",
                 "JayBeeTest",
                 "-n",
@@ -63,7 +72,8 @@
             "args": [
                 "--config=testConfig.json",
                 "tailTopics",
-                "^Test-E"
+                "^tammi.*",
+                "--follow"
             ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
@@ -98,7 +108,18 @@
                 "${workspaceFolder}/**/*.js"
             ],
             "outputCapture": "std"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Server",
+            "program": "${workspaceFolder}/src/server.ts",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "args": [],
+            "outFiles": [
+                "${workspaceFolder}/**/*.js"
+            ],
+            "outputCapture": "std"
         }
-
     ]
 }
