--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "create": "npm run build && npm run test",
     "build": "tsc -p .",
     "test": "sudo npm i -g && pizza",
-    "refresh": "rm -rf ./node_modules ./package-lock.json && npm install"
+    "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
+    "dev": "nodemon src/server.ts",
+    "dev:debug": "nodemon --inspect src/server.ts | pino-pretty --translateTime --colorize"
   },
   "bin": {
     "kafka-cli": "src/index.js"
@@ -22,6 +24,10 @@
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "commander": "^3.0.2",
+    "dotenv": "^8.2.0",
+    "envalid": "^5.0.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "figlet": "^1.2.4",
     "kafkajs": "^1.11.0",
     "path": "^0.12.7",
@@ -31,6 +37,7 @@
   },
   "devDependencies": {
     "@types/clear": "^0.1.0",
+    "@types/express": "^4.17.1",
     "@types/figlet": "^1.2.0",
     "@types/node": "^12.11.1",
     "@types/pino": "^5.8.12",
