--- a/testConfig.json
+++ b/testConfig.json
@@ -1,5 +1,8 @@
 {
-  "brokers": ["172.31.246.7:9092", "172.31.246.8:9092", "172.31.246.9:9092"],
+  "brokers": [
+    "localhost:54833",
+    "localhost:54850"
+  ],
   "clientId": "JayBeesTestClientId-Test",
   "groupId": "JayBeesTestGroupId-Test",
   "logLevel": 2
