--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/await-timeout": "^0.3.1",
+    "@types/socket.io": "^2.1.4",
     "await-timeout": "^0.6.0",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
@@ -34,12 +35,14 @@
     "path": "^0.12.7",
     "pino": "^5.13.5",
     "pino-pretty": "^3.2.2",
+    "rxjs": "^6.5.3",
     "sass": "^1.23.1",
+    "socket.io": "^2.3.0",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
     "@types/clear": "^0.1.0",
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.2",
     "@types/figlet": "^1.2.0",
     "@types/node": "^12.11.1",
     "@types/pino": "^5.8.12",
