--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "brokers": ["172.31.246.7:9092", "172.31.246.8:9092", "172.31.246.9:9092"],
-  "clientId": "JayBeesTestClientId",
-  "groupId": "JayBeesTestGroupId",
+  "clientId": "JayBeesTestClientId1",
+  "groupId": "JayBeesTestGroupId1",
   "logLevel": 2
 }
