--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/await-timeout": "^0.3.1",
     "@types/socket.io": "^2.1.4",
+    "@types/uuid": "^3.4.6",
     "await-timeout": "^0.6.0",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
@@ -39,6 +40,7 @@
     "rxjs": "^6.5.3",
     "sass": "^1.23.7",
     "socket.io": "^2.3.0",
+    "uuid": "^3.3.3",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
