--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -158,6 +158,40 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "kafka-cl createTopic",
+      "program": "${workspaceFolder}\\src\\index.ts",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "args": [
+        "createTopic",
+        "hugo",
+        "--numPartitions=2",
+        "--replicationFactor=3",
+        "--configValue=cleanup.policy=compact",
+        "--configValue=segment.ms=600000"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/**/*.js"
+      ],
+      "outputCapture": "std"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "kafka-cl createTopics",
+      "program": "${workspaceFolder}\\src\\index.ts",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "args": [
+        "createTopics",
+        "createTopic.yaml"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/**/*.js"
+      ],
+      "outputCapture": "std"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Server",
       "program": "${workspaceFolder}/src/server.ts",
       "preLaunchTask": "tsc: build - tsconfig.json",
