Readme and evolving topics

--- a/vmis2-topics.yaml
+++ b/vmis2-topics.yaml
@@ -51,6 +51,8 @@ topicsConfigs:
   - VRZ-MeasuresSelected
   - UZ_A2-SituationsRecognized
   - VRZ-SituationsMerged
+  - VRZ-CausalLinkTask
+  - VRZ-ChangeableMeasuresTask
   config:
     numPartitions: 10
     replicationFactor: 3
