--- a/vmis2-topics.yaml
+++ b/vmis2-topics.yaml
@@ -31,6 +31,136 @@ topicsConfigs:
   - VRZ-Measures-external
   - VRZ-ControlSignMeasures
   - VRZ-ControlSignReason
+  - VRZ-SchemaRepository-Schema
+  - UZ_A2-tlsin-WZGGrundeinstellung
+  - UZ_A2-tlsin-UFDDeFehler
+  - UZ_A2-tlsin-WZGStellzustand
+  - UZ_A2-tlsin-LVEPositiveQuittung
+  - UZ_A2-tlsin-WZGDefekteLampen
+  - UZ_A2-tlsin-WZGNegativeQuittung
+  - UZ_A2-tlsin-WZGNichtDarstellbareWVZ
+  - UZ_A2-tlsin-VLTDeFehler
+  - UZ_A2-tlsin-WZGDeFehler
+  - UZ_A2-tlsin-WZGErgDeFehler
+  - UZ_A2-tlsin-WZGGestoerteTextpositionen
+  - UZ_A2-tlsin-VLTTuerkontakt
+  - UZ_A2-tlsin-LVEBetriebsparameter
+  - UZ_A2-tlsin-VLTErgDeFehler
+  - UZ_A2-tlsin-LVEDeFehler
+  - UZ_A2-tlsin-VLTKanalsteuerung
+  - UZ_A2-tlsin-UFDBetriebsparameter
+  - UZ_A2-tlsin-UFDErgDeFehler
+  - UZ_A2-tlsin-WZGBetriebsart
+  - UZ_A2-tlsin-LVEErgDeFehler
+  - UZ_A2-tlsin-WZGKanalsteuerung
+  - UZ_A2-tlsin-VLTBetriebsparameter
+  - UZ_A2-tlsin-LVEKanalsteuerung
+  - UZ_A2-tlsin-SYSFehlerDUE
+  - UZ_A2-tlsin-LVENegativeQuittung
+  - VRZ-Parameter-VerkehrszustandsstufeSituationMapping
+  - VRZ-Parameter-Verkehrszustandsstufe
+  - VRZ-Parameter-ZeitabhaengigePruefungenTT1
+  - VRZ-Parameter-DatenuebernahmeNO
+  - VRZ-Parameter-VdeMesswertersetzung
+  - VRZ-Parameter-DefaultControlSigns
+  - VRZ-Parameter-LkwAufkommenKriteriumNaesse
+  - VRZ-Parameter-Sichtweitenstufe
+  - VRZ-Parameter-FsBezogeneAnalyseDerGeschwindigkeitsdifferenz
+  - VRZ-Parameter-FahrstreifenbezogeneKenngroessen
+  - VRZ-Parameter-DetektorvergleichStandortbezogen
+  - VRZ-Parameter-DetektorLaengsabgleichLT
+  - VRZ-Parameter-RichtungsbezogeneKenngroessen
+  - VRZ-Parameter-Sichtweitenerkennung
+  - VRZ-Parameter-PLErsatz
+  - VRZ-Parameter-ErmittlungVerkehrsstufeFS
+  - VRZ-Parameter-DatenuebernahmeSWE
+  - VRZ-Parameter-StauerkennungKriteriumBelegung
+  - VRZ-Parameter-Helligkeitsstufe
+  - VRZ-Parameter-LkwAufkommenBeiHohemVerkehrsaufkommen
+  - VRZ-Parameter-DatenuebernahmeLD
+  - VRZ-Parameter-PLErgebniskonstanz
+  - VRZ-Parameter-LkwAufkommenKriteriumSichtSituationMapping
+  - VRZ-Parameter-UnruheImVerkehr
+  - VRZ-Parameter-StauerkennungKriteriumGeschwindigkeitSituationMapping
+  - VRZ-Parameter-DatenuebernahmeTT1
+  - VRZ-Parameter-DatenuebernahmeWGM
+  - VRZ-Parameter-PLLogisch
+  - VRZ-Parameter-ImmissionBerechnung
+  - VRZ-Parameter-NaesseerkennungDerFahrbahn
+  - VRZ-Parameter-GlaKorridor
+  - VRZ-Parameter-Naesseerkennung
+  - VRZ-Parameter-SituationCatalogue
+  - VRZ-Parameter-LkwAufkommenKriteriumSicht
+  - VRZ-Parameter-ErmittlungVerkehrsstufeMQ
+  - VRZ-Parameter-DifferenzialkontrolleFBT
+  - VRZ-Parameter-ExponentielleGlaettungNI
+  - VRZ-Parameter-Geisterfahrer
+  - VRZ-Parameter-Glaetteerkennung
+  - VRZ-Parameter-DatenuebernahmePM10
+  - VRZ-Parameter-LangsamFahrendeFahrzeuge
+  - VRZ-Parameter-Laerm
+  - VRZ-Parameter-GlaStuetzstellen
+  - VRZ-Parameter-DatenuebernahmeRLF
+  - VRZ-Parameter-Sichtweitenstufe_NEU
+  - VRZ-Parameter-DatenuebernahmeFBT
+  - VRZ-Parameter-StauerkennungKriteriumGeschwindigkeit
+  - VRZ-Parameter-DatenuebernahmeFBZ
+  - VRZ-Parameter-DatenuebernahmeHK
+  - VRZ-Parameter-GlaCluster
+  - VRZ-Parameter-GleitendeMittelwertbildung
+  - VRZ-Parameter-DatenuebernahmeLAMS
+  - VRZ-Parameter-Aggregation
+  - VRZ-Parameter-DetektorLaengsabgleichFBZ
+  - VRZ-Parameter-MeasureCatalogue
+  - VRZ-Parameter-Zeitsynchronisation
+  - VRZ-Parameter-DatenuebernahmeTPT
+  - VRZ-Parameter-DatenuebernahmeGLS
+  - VRZ-Parameter-DatenuebernahmeNI
+  - VRZ-Parameter-ExponentielleGlaettungWFD
+  - VRZ-Parameter-UnruheImVerkehrSituationMapping
+  - VRZ-Parameter-ZeitabhaengigePruefungenLT
+  - VRZ-Parameter-DatenuebernahmeNS
+  - VRZ-Parameter-GlaettungUndTrendextrapolation
+  - VRZ-Parameter-DatenuebernahmeGT
+  - VRZ-Parameter-Glaettung
+  - VRZ-Parameter-DatenuebernahmeTT3
+  - VRZ-Parameter-PLBelegung
+  - VRZ-Parameter-Wasserfilmdickenstufe
+  - VRZ-Parameter-Niederschlagsintensitaetsstufe
+  - VRZ-Parameter-ZeitabhaengigePruefungenTT3
+  - VRZ-Parameter-DetektorLaengsabgleichNS
+  - VRZ-Parameter-Seitenwind
+  - VRZ-Parameter-FsBezogeneAnalyseDerVerkehrsverhaeltnisse
+  - VRZ-Parameter-DatenuebernahmeTSK
+  - VRZ-Parameter-Fundamentaldiagrammbetrachtung
+  - VRZ-Parameter-GlaVerschmelzung
+  - VRZ-Parameter-DatenuebernahmeWR
+  - VRZ-Parameter-DetektorLaengsabgleichNI
+  - VRZ-Parameter-DatenuebernahmeWGS
+  - VRZ-Parameter-DatenuebernahmeNOX
+  - VRZ-Parameter-DatenuebernahmeLT
+  - VRZ-Parameter-GewichteteGleitendeMittelwertbildung
+  - VRZ-Parameter-PLWerteBereich
+  - VRZ-Parameter-NaesseerkennungSituationMapping
+  - VRZ-Parameter-UdeMesswertersetzungUz
+  - VRZ-Parameter-ZeitabhaengigePruefungenHK
+  - VRZ-Parameter-StauerkennungKriteriumBelegungSituationMapping
+  - VRZ-Parameter-GlaEreignis
+  - VRZ-Parameter-DatenuebernahmeNO2
+  - VRZ-Parameter-LkwAufkommenKriteriumNaesseSituationMapping
+  - VRZ-Parameter-AixProB
+  - VRZ-Parameter-DatenuebernahmeWFD
+  - VRZ-Parameter-FsBezogeneStoerfallerkennung
+  - VRZ-Parameter-ErweiterteWitterungsdetektion
+  - VRZ-Parameter-SichtweitenerkennungSituationMapping
+  - VRZ-Parameter-AttributeCatalogue
+  - VRZ-Parameter-VdeMesswertersetzungNachbar
+  - VRZ-Parameter-DunkelHellErkennung
+  - VRZ-Parameter-DatenuebernahmeRS
+  - VRZ-Parameter-ZeitabhaengigePruefungenFBT
+  - VRZ-Parameter-FundamentaldiagrammbetrachtungSituationMapping
+  - VRZ-Parameter-ExponentielleGlaettungSWE
+  - VRZ-Parameter-Zusammenbruchswahrscheinlichkeit
   config:
     numPartitions: 1
     replicationFactor: 3
@@ -63,4 +193,38 @@ topicsConfigs:
       value: "3600000"
     - name: retention.ms
       value: "86400000"
-
+# Standard topics: one partitions, no log compation (just for tls, should be changed if possible to multi partitions)
+- topics:
+  - UZ_A2-tlsin-UFDLufttemperatur
+  - UZ_A2-tlsin-UFDWindgeschwindigkeitMax
+  - UZ_A2-tlsin-UFDFahrbahnoberflaechentemperatur
+  - UZ_A2-tlsin-LVEErgebnisVersion3
+  - UZ_A2-tlsin-UFDRelativeLuftfeuchte
+  - UZ_A2-tlsin-UFDBodentemperaturTiefe3
+  - UZ_A2-tlsin-UFDWindrichtung
+  - UZ_A2-tlsin-VLTUeberspannungsschutz
+  - UZ_A2-tlsin-LVEGeisterfahrer
+  - UZ_A2-tlsin-LVEKfzEinzeldaten
+  - UZ_A2-tlsin-WZGHelligkeit
+  - UZ_A2-tlsin-UFDWasserfilmdicke
+  - UZ_A2-tlsin-UFDNiederschlagsart
+  - UZ_A2-tlsin-UFDTaustoffkonzentration
+  - UZ_A2-tlsin-UFDRestsalz
+  - UZ_A2-tlsin-UFDNiederschlagsintensitaet
+  - UZ_A2-tlsin-UFDKanalsteuerung
+  - UZ_A2-tlsin-LVEErgebnisVersion13
+  - UZ_A2-tlsin-UFDTaupunkttemperatur
+  - UZ_A2-tlsin-UFDLuftdruck
+  - UZ_A2-tlsin-LVEErgebnisVersion4
+  - UZ_A2-tlsin-UFDSichtweite
+  - UZ_A2-tlsin-UFDWindgeschwindigkeit
+  - UZ_A2-tlsin-LVEErgebnisVersion21
+  - UZ_A2-tlsin-UFDGefriertemperatur
+  - UZ_A2-tlsin-VLTStromversorgung
+  - UZ_A2-tlsin-VLTHeizung
+  - UZ_A2-tlsin-UFDZustandFahrbahnoberflaeche
+  - UZ_A2-tlsin-LVEGeschwindigkeitsklassenKurz
+  - UZ_A2-tlsin-UFDHelligkeit
+  config:
+    numPartitions: 1
+    replicationFactor: 3
