Better messages for createTopics and alterTopics.
createTopics: If a topics already exists it is only reported with -v
alterTopics: If a topic does not exist it si only reported with -v
Print a warning if no topics is altered or created!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -180,7 +180,8 @@
       "preLaunchTask": "tsc: build - tsconfig.json",
       "args": [
         "createTopics",
-        "createTopic.yaml"
+        "createTopic.yaml",
+        "-v"
       ],
       "outFiles": [
         "${workspaceFolder}/**/*.js"
@@ -195,7 +196,8 @@
       "preLaunchTask": "tsc: build - tsconfig.json",
       "args": [
         "alterTopics",
-        "createTopic.yaml"
+        "createTopic.yaml",
+        "-v"
       ],
       "outFiles": [
         "${workspaceFolder}/**/*.js"
